wip: fix error in dsc signing

--- a/src/main/resources/templates/sign.html
+++ b/src/main/resources/templates/sign.html
@@ -26,6 +26,7 @@
     <Label for="authority">Authority<input id="authority" type="text" name="authority" /></Label><br />
     <Label for="folder">Folder<input id="folder" type="text" name="folder" /></Label><br />
     <Label for="protocol">Protocol<input id="protocol" type="text" name="protocol" /></Label><br />
+    <Label for="password">Password<input id="password" type="text" name="password" /></Label><br />
 
     <Label for="signName">Signature Name<input id="signName" type="text" name="signName" /></Label><br/>
     <Label for="signReason">Signature Reason<input id="signReason" type="text" name="signReason" /></Label><br/>
