fix: update the log position

--- a/src/main/resources/templates/sign.html
+++ b/src/main/resources/templates/sign.html
@@ -58,6 +58,15 @@
         .form-group input[type="submit"]:hover {
             background-color: #0056b3;
         }
+
+        .footer {
+            text-align: center;
+            padding: 20px;
+        }
+
+        .footer .coffee-icon {
+            font-size: 24px;
+        }
     </style>
 </head>
 <body>
@@ -74,7 +83,7 @@
 
         <div class="form-group">
             <label for="file">Select a File</label>
-            <input id="file" type="file" name="file" />
+            <input id="file" type="file" name "file" />
         </div>
 
         <div class="form-group">
@@ -87,5 +96,10 @@
         </div>
     </form>
 </div>
+
+<div class="footer">
+    Made with <span class="coffee-icon">☕</span> by C3iHub
+</div>
+
 </body>
 </html>
