--- a/src/main/resources/templates/sign.html
+++ b/src/main/resources/templates/sign.html
@@ -83,7 +83,7 @@
 
         <div class="form-group">
             <label for="file">Select a File</label>
-            <input id="file" type="file" name "file" />
+            <input id="file" type="file" name="file" />
         </div>
 
         <div class="form-group">
